in python 3.6 the problem of the hist function
should change like :
hist(hist_labels.values, bins, density=1,stacked=True, facecolor=color)

--- a/AirSimE2EDeepLearning/DataExplorationAndPreparation.ipynb
+++ b/AirSimE2EDeepLearning/DataExplorationAndPreparation.ipynb
@@ -546,7 +546,7 @@
     "\n",
     "def steering_histogram(hist_labels, title, color):\n",
     "    plt.figure(figsize=FIGURE_SIZE)\n",
-    "    n, b, p = plt.hist(hist_labels.as_matrix(), bins, normed=1, facecolor=color)\n",
+    "    n, b, p = plt.hist(hist_labels.values, bins, density=1,stacked=True, facecolor=color)\n",
     "    plt.xlabel('Steering Angle')\n",
     "    plt.ylabel('Normalized Frequency')\n",
     "    plt.title(title)\n",
